crates/utils/re_gpu_video/src/vulkan/h265/snapshots/re_gpu_video__vulkan__h265__tests__multi_slice.snap
---
source: crates/utils/re_gpu_video/src/vulkan/h265/tests.rs
expression: "trace_fixture(\"multi_slice\")"
---
# AU 0
ParametersChanged
DecodeFrame { poc: 0, idr, slot 0, slices: 2 }
# AU 1
DecodeFrame { poc: 1, slot 1, slices: 2, refs: [slot 0 (st poc 0)], before: [0] }
# AU 2
DecodeFrame { poc: 2, slot 2, slices: 2, refs: [slot 0 (st poc 0), slot 1 (st poc 1)], before: [1, 0] }
# AU 3
DecodeFrame { poc: 3, slot 3, slices: 2, refs: [slot 0 (st poc 0), slot 1 (st poc 1), slot 2 (st poc 2)], before: [2, 1, 0] }
# AU 4
DecodeFrame { poc: 4, slot 0, slices: 2, refs: [slot 1 (st poc 1), slot 2 (st poc 2), slot 3 (st poc 3)], before: [3, 2, 1] }
# AU 5
DecodeFrame { poc: 5, slot 1, slices: 2, refs: [slot 0 (st poc 4), slot 2 (st poc 2), slot 3 (st poc 3)], before: [0, 3, 2] }
# AU 6
DecodeFrame { poc: 6, slot 2, slices: 2, refs: [slot 0 (st poc 4), slot 1 (st poc 5), slot 3 (st poc 3)], before: [1, 0, 3] }
# AU 7
DecodeFrame { poc: 7, slot 3, slices: 2, refs: [slot 0 (st poc 4), slot 1 (st poc 5), slot 2 (st poc 6)], before: [2, 1, 0] }
# reorder delay 0
